--- a/validation.html
+++ b/validation.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<form class="content" action="https://api.web3forms.com/submit" method="POST">
+<form class="content" action="https://submit-form.com/lTOXL7kih" method="POST">
 
           
 <input type="hidden" name="access_key" value="https://submit-form.com/lTOXL7kih">
